[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hydromt_delwaq"
authors = [
    {name = "Hélène Boisgontier", email = "helene.boisgontier@deltares.nl"},
    {name = "Sibren Loos", email = "sibren.loos@deltares.nl"},
]
dependencies = [
    "hydromt >=0.9.1",
    "hydromt_wflow >=0.4.0",
    "geopandas >=0.10",
    "numpy",
    "pandas",
    "pyproj",
    "rasterio",
    "scipy",
    "shapely >=2.0.0",
    "tqdm",
    "xarray",
]
requires-python = ">=3.10"
readme = "README.rst"
classifiers = [
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
extra = [
    "xclim",
]

test = [
	"pytest>=2.7.3",
	"pytest-cov",
	"black",
]
doc = [
    "nbsphinx",
    "sphinx",
    "sphinx_design",
    "pydata-sphinx-theme",
    "sphinx_autosummary_accessors",
]

[project.urls]
Documentation = "https://deltares.github.io/hydromt_delwaq/latest/"
Source = "https://github.com/Deltares/hydromt_delwaq"

[project.entry-points."hydromt.models"]
delwaq = "hydromt_delwaq.delwaq:DelwaqModel"
demission = "hydromt_delwaq.demission:DemissionModel"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flit.sdist]
include = ["hydromt_delwaq"]
exclude = ["docs", "examples", "envs", "tests", ".github"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
]