[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hydromt_delwaq"
authors = [
    {name = "Hélène Boisgontier", email = "helene.boisgontier@deltares.nl"},
    {name = "Sibren Loos", email = "sibren.loos@deltares.nl"},
]
dependencies = [
    "hydromt >=0.9.1",
    "hydromt_wflow >=0.4.0",
    "geopandas >=0.10",
    "numpy",
    "pandas",
    "pyproj",
    "rasterio",
    "scipy",
    "shapely >=2.0.0",
    "tqdm",
    "xarray",
]
requires-python = ">=3.10"
readme = "README.rst"
classifiers = [
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
extra = [
    "xclim",
]
dev = [
    "black",
    "ruff",
    "pre-commit",
    "pip>=23.1.2",
]
test = [
	"pytest>=2.7.3",
	"pytest-cov",
	"hydromt_delwaq[dev, extra]",
]
doc = [
    "nbsphinx",
    "sphinx",
    "sphinx_design",
    "pydata-sphinx-theme",
    "sphinx_autosummary_accessors",
    "hydromt_delwaq[examples,extra]",
]
examples = [
    "jupyterlab",
    "cartopy",
    "matplotlib",
    "notebook",
]
full = ["hydromt_delwaq[extra,dev,test,doc,examples]"]
slim = ["hydromt_delwaq[extra,examples]"]

[project.urls]
Documentation = "https://deltares.github.io/hydromt_delwaq/latest/"
Source = "https://github.com/Deltares/hydromt_delwaq"

[project.entry-points."hydromt.models"]
delwaq = "hydromt_delwaq.delwaq:DelwaqModel"
demission = "hydromt_delwaq.demission:DemissionModel"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88

# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT)
select = ["E", "F", "I", "PT", "D"]
ignore-init-module-imports = true
ignore = ["D211", "D213", "E741", "D105", "E712"]
exclude = ["docs"]

[tool.ruff.per-file-ignores]
"tests/**" = ["D103", "D100", "D104"]
"hydromt_delwaq/__init__.py" = ["F403", "E402"]
"hydromt_delwaq/workflows/__init__.py" = ["F403"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.flit.sdist]
include = ["hydromt_delwaq"]
exclude = ["docs", "examples", "envs", "tests", ".github"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
]
