[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hydromt_delwaq"
authors = [
    {name = "Hélène Boisgontier", email = "helene.boisgontier@deltares.nl"},
    {name = "Sibren Loos", email = "sibren.loos@deltares.nl"},
]
dependencies = [
    "hydromt>=1.3.0",
    "hydromt_wflow>=1.0.1",
    "geopandas >=0.10",
    "numpy",
    "pandas",
    "pyproj",
    "rasterio",
    "scipy",
    "shapely",
    "tqdm",
    "xarray",
    "xugrid>=0.14.3",
]
requires-python = ">=3.10"
readme = "README.rst"
classifiers = [
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pre-commit",
    "pip>=23.1.2",
]
test = [
	"pytest>=2.7.3",
	"pytest-cov",
    "pytest-timeout",
]
doc = [
    "nbsphinx",
    "sphinx",
    "sphinx_design",
    "pydata-sphinx-theme",
    "sphinx_autosummary_accessors",
]
examples = [
    "jupyterlab",
    "cartopy",
    "matplotlib",
    "notebook",
]
full = ["hydromt_delwaq[dev,test,doc,examples]"]
slim = ["hydromt_delwaq[examples]"]

[project.urls]
Documentation = "https://deltares.github.io/hydromt_delwaq/latest/"
Source = "https://github.com/Deltares/hydromt_delwaq"

[project.entry-points."hydromt.models"]
delwaq = "hydromt_delwaq.delwaq"
demission = "hydromt_delwaq.demission"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88

# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT)
select = ["E", "F", "I", "PT", "D"]
ignore-init-module-imports = true
ignore = ["D211", "D213", "E741", "D105", "E712"]
exclude = ["docs"]

[tool.ruff.per-file-ignores]
"tests/**" = ["D103", "D100", "D104"]
"hydromt_delwaq/__init__.py" = ["F403", "E402", "F401"]
"hydromt_delwaq/workflows/__init__.py" = ["F403"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.flit.sdist]
include = ["hydromt_delwaq"]
exclude = ["docs", "examples", "envs", "tests", ".github"]

[tool.pytest.ini_options]
addopts = "--ff --timeout=120 "
testpaths = ["tests"]
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
]
